force-app/main/default/objects/CP_Meeting_Targets__c/CP_Meeting_Targets__c.object-meta.xml
<CustomObject>
    <label>CP Meeting Targets</label>
    <nameField>
        <displayFormat>Target-{0000}</displayFormat>
        <label>CP Meeting Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Meeting Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>