force-app/main/default/objects/CP_Meeting_Targets__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>