force-app/main/default/objects/CP_Meeting_Targets__c/fields/CP_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Name</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>CP Meeting Targets</relationshipLabel>
    <relationshipName>CP_Meeting_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>