force-app/main/default/objects/CP_Meeting_Targets__c/fields/Monthly_Meeting_target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Meeting_target__c</fullName>
    <label>Monthly Meeting target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>