force-app/main/default/objects/CP_Meeting_Targets__c/fields/SM_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CP_Meeting_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>