force-app/main/default/objects/CP_Meeting_Targets__c/recordTypes/AOP_Targets.recordType-meta.xml
<RecordType>
    <fullName>AOP_Targets</fullName>
    <active>true</active>
    <label>AOP Targets</label>
</RecordType>