force-app/main/default/objects/CP_Meeting_Targets__c/recordTypes/Non_AOP_Targets.recordType-meta.xml
<RecordType>
    <fullName>Non_AOP_Targets</fullName>
    <active>true</active>
    <label>Non AOP Targets</label>
</RecordType>