force-app/main/default/objects/CP_Meeting_Targets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Monthly_Meeting_target__c</columns>
    <columns>Achievement__c</columns>
    <columns>Segment__c</columns>
    <columns>SM_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>